Cleans/finalizes the menu layout and fixes the arrow button overlap bug

--- a/src/Arrow/Arrow.css
+++ b/src/Arrow/Arrow.css
@@ -11,4 +11,6 @@
     position: sticky;
     top: 0;
     left: 80%;
+    z-index: 100;
+
 }
